<resources>
    <string name="app_name">Musiast</string>
    <string name="splash_name">Musiast</string>
    <string name="pass_hint">Password</string>
    <string name="discover_people">Discover People</string>
    <string name="main_name">MUSIAST</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">Email Address</string>
    <string name="google_btn">Continue with Google</string>
    <string name="facebook_btn">Continue with Facebook</string>
    <string name="signin_btn">Already a user?</string>
    <string name="signup_btn">Create a new account</string>
    <string name="show_pwd">Show Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="sign_up_user_name">Profile Name</string>
    <string name="user_name">Name</string>
    <string name="comments">Comments</string>
    <string name="post">Post</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="share_to">Share to</string>
    <string name="share">Share</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="private_information">Private Information</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="default_web_client_id_auth">81115336982-57528oa6pkqvp07vjl0kp3kehbj3s40h.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1651288731873071</string>
    <string name="fb_login_protocol_scheme">fb1651288731873071</string>
    <string name="facebook_client_token">8dd1b1728e04738b74cb45b600e08c1f</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_date">Published On 04/Jul/2020</string>
    <string name="default_news_title">Here\'s the pretty long news title wish that you love it</string>
    <string name="default_news_description">We have something to tell you here</string>
    <string name="loading">Loading</string>
    <string name="default_search_text">Covid 19</string>
    <string name="error">Error!</string>
</resources>